@@ -1,3 +1,8 @@
+2005-06-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* applier.c: (render_wallpaper), (is_nautilus_running): GCC4
+	build issues.
+
 2005-05-08  Richard Hoelscher  <rah@rahga.com>
 
 	* applier.c (refresh_render): Remove egg_pixbuf_new_from_file_at_size,
